test/files/neg/t6406-regextract.check
t6406-regextract.scala:4: error: cannot resolve overloaded unapply
  List(1) collect { case r(i) => i }
                         ^
one error found
